kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maya-exchange
  labels:
    name: maya-exchange
