kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maya-exchange-service
  labels:
    app: maya-exchange
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: maya-exchange
